# RAL

./: .gitmodules  CMakeGenerate.VS2022.x64.DirectX11.bat  CMakeLists.txt  README.md
CMake/: APIOptions.cmake  ImplementOptions.cmake  RALImportForTarget.cmake  TargetUseRAL.cmake
RAL/: CMakeLists.txt
RAL/ConfigurationFiles/RAL/: .BuildInfo
RAL/FakeSource/RAL/: API.cpp
RAL/Implements/: CMakeLists.txt
RAL/Implements/DirectX11/: CMakeLists.txt
RAL/Implements/DirectX11/Source/RAL/DirectX11/: API.cpp  API.h  DirectX11.h
RAL/Implements/DirectX12/: CMakeLists.txt
RAL/Source/RAL/: API.cpp  API.h  AbstractObject.h  BuildInfo.h.in  EntryPoint.h  Exception.h  Flag.h  Format.cpp  Format.h  FormatManager.cpp  FormatManager.h  Log.cpp  Log.h  RAL.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Singleton.h  Usage.cpp  Usage.h  UsageManager.cpp  UsageManager.h  Utils.h
RAL/Source/RAL/DirectX11/: API.cpp  API.h  FormatManager.cpp  FormatManager.h  UsageManager.cpp  UsageManager.h
RAL/Source/RAL/Utils/: AbstractObject.h  Class64.h  Enum.h  Types.h  Utils.h
RAL/Sources/RAL/: API.cpp  API.h  AbstractEnum.h  FlagManager.cpp  FlagManager.h  Flags.cpp  Flags.h  Format.h  FormatManager.cpp  FormatManager.h  RAL.h  Types.h  UsageManager.h
RAL/Sources/RAL/DirectX11/: API.cpp  API.h  FormatManager.h  UsageManager.cpp
Samples/: CMakeLists.txt
Samples/InitRAL/: CMakeLists.txt
Samples/InitRAL/Source/: InitRAL.cpp  Main.cpp
Samples/InitRAL/Sources/: Main.cpp
